--- a/Proyecto_Aerolinea.Web/appsettings.json
+++ b/Proyecto_Aerolinea.Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MyConnection": "Server=localhost; Database=Airline; Trusted_Connection=True; Encrypt=false;"
+  }
 }
