--- a/Proyecto_Aerolinea.Web/appsettings.json
+++ b/Proyecto_Aerolinea.Web/appsettings.json
@@ -1,12 +1,14 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=SystemAirline;Trusted_Connection=True;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "MyConnection": "Server=localhost; Database=Airline; Trusted_Connection=True; Encrypt=false;"
-  }
+
+  "AllowedHosts": "*"
 }
