Correcciones de cambio de clave y de creacion de database

--- a/Proyecto_Aerolinea.Web/appsettings.json
+++ b/Proyecto_Aerolinea.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MyConnection": "Server=localhost; Database=SystemAirline; Trusted_Connection=True;" // Cambienlo a sus bases
+    "MyConnection": "Server=localhost; Database=SystemAirline; Trusted_Connection=True; encrypt=false;" // Cambienlo a sus bases
   },
 
   "Logging": {
