Primera versión del proyecto Aerolínea

--- a/Proyecto_Aerolinea.Web/appsettings.json
+++ b/Proyecto_Aerolinea.Web/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
-    "MyConnection": "Server=localhost; Database=SystemAirline; Trusted_Connection=True; encrypt=false;" // Cambienlo a sus bases
+    "MyConnection": "Server=(localdb)\\MSSQLLocalDB; Database=_____SystemAirlines_____; Trusted_Connection=True; MultipleActiveResultSets=true;"
   },
+
 
   "Logging": {
     "LogLevel": {
