Agregado: Seeder vincula permisos automáticamente al rol Admin

--- a/Proyecto_Aerolinea.Web/appsettings.json
+++ b/Proyecto_Aerolinea.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MyConnection": "Server=(localdb)\\MSSQLLocalDB; Database=_____SystemAirlines_____; Trusted_Connection=True; MultipleActiveResultSets=true;"
+    "MyConnection": "Server=(localdb)\\MSSQLLocalDB; Database=SystemAirlines; Trusted_Connection=True; MultipleActiveResultSets=true;"
   },
 
 
